package com.android.taskstimer.core.presentation.util

object TestTags {


    // HomeScreen
    const val TOP_APP_BAR_TEXT = "TOP_APP_BAR_TEXT"
    const val ADD_TIMER_FAB = "ADD_TIMER_FAB"
    const val OPEN_DRAWER_BUTTON = "OPEN_DRAWER_BUTTON"
    const val BOARD_MENU_BUTTON = "BOARD_MENU_BUTTON"
    const val TIMER = "TIMER"
    const val TIMER_MENU = "TIMER_MENU"
    const val CONFIRM_DELETE = "CONFIRM_DELETE"

    // HomeScreen - Drawer
    const val DRAWER = "DRAWER"
    const val DRAWER_EDIT_BUTTON = "DRAWER_EDIT_BUTTON"
    const val DRAWER_ADD_BOARD_BUTTON = "DRAWER_ADD_BOARD_BUTTON"
    const val BOARD = "BOARD"

    // HomeScreen - Add board dialog
    const val DIALOG_ADD_BOARD_INPUT_FIELD = "ADD_BOARD_INPUT_FIELD"
    const val DIALOG_ADD_BOARD_CONFIRM = "ADD_BOARD_CONFIRM"
    const val DIALOG_ADD_BOARD_CANCEL = "ADD_BOARD_CANCEL"

   // HomeScreen - Board Menu
    const val BOARD_MENU_RENAME_BOARD = "RENAME_BOARD"
    const val BOARD_MENU_RESET_ALL_TIMERS = "RESET_ALL_TIMERS"
    const val BOARD_MENU_DELETE_BOARD = "DELETE_BOARD"

    // HomeScreen - Timer Menu
    const val TIMER_MENU_RENAME_TIMER = "RENAME_TIMER"
    const val TIMER_MENU_DELETE_TIMER = "DELETE_TIMER"





    // TimerAddScreen
    const val SAVE_BUTTON = "SAVE_BUTTON"
    const val INPUT_FIELD = "INPUT_FIELD"
}